Fix some bug.